# Image-Processor

./: README.md
img proc/: BMP.cpp  BMP.h  CMakeLists.txt  Filter.cpp  Filter.h  Image.cpp  Image.h  Parser.cpp  Parser.h  RGB.cpp  RGB.h  image_processor.cpp
img proc/filters/: Blur.cpp  Blur.h  Crop.cpp  Crop.h  Custom.cpp  Custom.h  EdgeDetection.cpp  EdgeDetection.h  Grayscale.cpp  Grayscale.h  Negative.cpp  Negative.h  Sharpening.cpp  Sharpening.h
